--- a/Kb-Umuzi-Project/web/css/umuzicss.css
+++ b/Kb-Umuzi-Project/web/css/umuzicss.css
@@ -10,10 +10,10 @@ and open the template in the editor.
 
 body {
     background: url(http://i.dailymail.co.uk/i/pix/2012/08/14/article-0-148A2387000005DC-695_964x641.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 
@@ -21,52 +21,139 @@ body {
 
 
 .headerfontsize{
-  font-size: 20px;
+    font-size: 20px;
 }
 
 .header{
-  font-family :"Helvetica";
-  background-color: #f99907;
+    font-family :"Helvetica";
+    background-color: #f99907;
 }
 
 .img-class{
-  margin-left: 100px;
+    margin-left: 95px;
 }
 .div-background{
- background: url(http://i.dailymail.co.uk/i/pix/2012/08/14/article-0-148A2387000005DC-695_964x641.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+    background: url(http://i.dailymail.co.uk/i/pix/2012/08/14/article-0-148A2387000005DC-695_964x641.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .header-text{
-  font-family: Verdana;
-  color: black;
+    font-family: Verdana;
+    color: black;
 }
 
 .header2{
-  margin-bottom: 50px;
+    margin-bottom: 50px;
 }
 
 .paragraph{
-  background-color: #f99907;
-  color: black;
+    background-color: #f99907;
+    color: black;
 }
-img-format2{
-  margin-top:-10px;
-  margin-bottom: 29px;
-  padding-bottom: 20px;
-  list-style-type: none;
-  width:50%;
+.img-format2{
+    margin-top:-10px;
+    margin-bottom: 29px;
+    padding-bottom: 20px;
+    list-style-type: none;
 
-  float:centre;
+
+    float:centre;
+}
+
+.blockquotes {
+    padding: 10px 20px;
+    margin: 0 0 20px;
+    font-size: 17.5px;
+    border-left: 0px;
+}
+
+.img-format3 {
+    margin-top: 86px;
+    margin-bottom: -21px;
+    /* padding-bottom: 20px; */
+    /* list-style-type: none; */
+    float: centre;
+    height: 300px;
+    width: 300px;
+    height: 268px;
+}
+
+
+.img-format4 {
+    margin-top: 86px;
+    margin-bottom: -21px;
+    /* padding-bottom: 20px; */
+    /* list-style-type: none; */
+    float: centre;
+    height: 300px;
+    width: 300px;
+}
+
+.img-format5 {
+    margin-top: 86px;
+    margin-bottom: -21px;
+    /* padding-bottom: 20px; */
+    /* list-style-type: none; */
+    float: centre;
+    height: 300px;
+    width: 300px;
+}
+
+.img-class {
+    margin-left: 4px;
+}
+
+
+
+
+.read-more-state {
+    display: none;
+}
+
+.read-more-target {
+    opacity: 0;
+    max-height: 0;
+    font-size: 0;
+    transition: .25s ease;
+}
+
+.read-more-state:checked ~ .read-more-wrap .read-more-target {
+    opacity: 1;
+    font-size: inherit;
+    max-height: 999em;
+}
+
+.read-more-state ~ .read-more-trigger:before {
+    content: 'Show more';
+}
+
+.read-more-state:checked ~ .read-more-trigger:before {
+    content: 'Show less';
+}
+
+.read-more-trigger {
+    cursor: pointer;
+    display: inline-block;
+    padding: 0 .5em;
+    color: #666;
+    font-size: .9em;
+    line-height: 2;
+    border: 1px solid #ddd;
+    border-radius: .25em;
+}
+
+/* Other style */ 
+body {
+    padding: 2%;
 }
 
 
 .img-format{
-  margin-top:-10px;
-  float:centre;
+    margin-top:-10px;
+    float:centre;
 }
 
 .button-style{
@@ -83,20 +170,20 @@ img-format2{
 }
 
 #slideshow {
-  margin: 80px auto;
-  position: relative;
-  width: 240px;
-  height: 240px;
-  padding: 10px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+    margin: 80px auto;
+    position: relative;
+    width: 240px;
+    height: 240px;
+    padding: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 }
 
 #slideshow > div {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  right: 10px;
-  bottom: 10px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
 }
 
 * {box-sizing:border-box}
@@ -105,65 +192,110 @@ body {font-family: Verdana,sans-serif;}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
 }
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
 }
 
 /* The dots/bullets/indicators */
 .dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
 }
 
 .active {
-  background-color: #717171;
+    background-color: #717171;
 }
 
 /* Fading animation */
 .fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
 }
 
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+ .read-more-state {
+  display: none;
 }
 
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+.read-more-target {
+  opacity: 0;
+  max-height: 0;
+  font-size: 0;
+  transition: .25s ease;
 }
 
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
+.read-more-state:checked ~ .read-more-wrap .read-more-target {
+  font-size: inherit;
+  max-height: 999em;
+}
+
+.read-more-state ~ .read-more-trigger:before {
+  content: 'Show more';
+}
+
+.read-more-state:checked ~ .read-more-trigger:before {
+  content: 'Show less';
+}
+
+.read-more-trigger {
+  cursor: pointer;
+  display: inline-block;
+  padding: 0 .5em;
+  color: black;
+  font-size: .9em;
+  line-height: 2;
+}
+
+/* Other style */ 
+body {
+  padding: 2%;
+}
+
+p {
+  padding: 2%;
+  background: none;
+  color: black;
+ 
+}
+
+.border-class{
+
+  border-radius: 25px;
+    
+}
+
+.border-class-img1{
+ border-radius: 25px;
+    
+}
+
+.paragraph2{
+    color: black;
 }
